src/test/ui/type-alias-impl-trait/issue-77179.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/issue-77179.rs:7:22
   |
LL | fn test() -> Pointer<_> {
   |              --------^-
   |              |       |
   |              |       not allowed in type signatures
   |              help: replace with the correct return type: `Box<i32>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0121`.
